--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </section>
 
-  <!-- PROJET 
+  <!-- PROJET -->
   <section id="projet">
     <div class="projet container">
       <div class="projet_haut">
@@ -47,6 +47,7 @@
         <div class="card">
           <h1>Projet 1</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam faucibus, ipsum a lobortis eleifend, purus elit consectetur diam, et vulputate ante est ut ligula. Vestibulum tincidunt felis vel nibh luctus tincidunt. Nam venenatis eleifend magna, quis tristique.</p>
+          <button><a href="#projet1">VOIR PLUS</a></button>
         </div>
         <div class="card">
           
@@ -56,43 +57,6 @@
         </div>
         <div class="card">
           
-        </div>
-      </div>
-    </div>
-  </section>-->
-
-  <section id="services">
-    <div class="services container">
-      <div class="service-top">
-        <h1 class="section-title">Serv<span>i</span>ces</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
-      </div>
-      <div class="service-bottom">
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
-        </div>
-        <div class="service-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
         </div>
       </div>
     </div>
